# PharmaAgentPro

./: .gitignore  CLAUDE.md  README.md  SKILLS.md  package-lock.json  pyproject.toml  requirements.txt
deploy/: README.md  chatbot.py  chatbot_server.py  chatbot_ui.html  deploy_managed_agent.py  test_fix.py
docs/: DEPLOYMENT.md  MARKETING_DECK.md  PharmaAgent_Pro_Marketing_Deck.pptx  PharmaAgent_Pro_Technical_Guide.docx  _build_pptx.js  generate_docx.py  generate_pptx.py
docs/extras/: TECHNICAL_GUIDE.md  _build_docx.js  _render_cover.py  _render_diagrams.py
src/: __init__.py  api.py  main.py
src/agents/: __init__.py  base_agent.py  orchestrator.py
src/datasets/: adverse_events.json  clinical_trials.json  drugs_compound_library.json  regulatory_templates.json
src/guardrails/: __init__.py  compliance.py  input_validator.py  output_filter.py  rate_limiter.py
src/memory/: __init__.py  memory_store.py
src/tools/: __init__.py  document_tools.py  drug_tools.py  trial_tools.py
src/utils/: __init__.py  audit.py  config.py  logger.py  usage_tracker.py
tests/: test_guardrails.py  test_memory.py  test_tools.py  test_utils.py
